@@ -1,39 +1,71 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>AAA</groupId>
-	<artifactId>AAA</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
-	<name>dddd</name>
-	<build>
-		<sourceDirectory>src</sourceDirectory>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.3</version>
-				<configuration>
-					<warSourceDirectory>WebContent</warSourceDirectory>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+<?xml version='1.0' encoding='UTF-8' ?>
 
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+	<modelVersion>4.0.0</modelVersion>
+
+	
+
+	<groupId>ferpsTests</groupId>
+	<artifactId>Pax-Exam-WildFly-Quickstart</artifactId>
+	<name>OPS4J Pax Exam Java EE Container Regression Tests</name>
+	<version>0.1.0.SNAPSHOT</version>
+	<packaging>jar</packaging>
+
+
+	<!-- Wildfly80 Start -->
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.wildfly</groupId>
+				<artifactId>wildfly-embedded</artifactId>
+				<version>8.1.0.CR1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.logging</groupId>
+				<artifactId>jboss-logging</artifactId>
+				<version>3.1.4.GA</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.logmanager</groupId>
+				<artifactId>jboss-logmanager</artifactId>
+				<version>1.5.2.Final</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.marshalling</groupId>
+				<artifactId>jboss-marshalling</artifactId>
+				<version>1.4.3.Final</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.xnio</groupId>
+				<artifactId>xnio-api</artifactId>
+				<version>3.2.0.Final</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.xnio</groupId>
+				<artifactId>xnio-nio</artifactId>
+				<version>3.2.0.Final</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.remoting</groupId>
+				<artifactId>jboss-remoting</artifactId>
+				<version>4.0.0.Final</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.sasl</groupId>
+				<artifactId>jboss-sasl</artifactId>
+				<version>1.0.4.Final</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	<!-- Wildfly80 End -->
 
 
 
 	<dependencies>
 
-		<!-- Pax Exam -->
+		<!-- Wildfly80 Start -->
 		<dependency>
 			<groupId>org.ops4j.pax.exam</groupId>
 			<artifactId>pax-exam-container-wildfly80</artifactId>
@@ -41,17 +73,73 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.5</version>
+			<groupId>org.wildfly</groupId>
+			<artifactId>wildfly-embedded</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging</artifactId>
 			<scope>test</scope>
 		</dependency>
 
 
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<groupId>org.jboss.logmanager</groupId>
+			<artifactId>jboss-logmanager</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.xnio</groupId>
+			<artifactId>xnio-api</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.xnio</groupId>
+			<artifactId>xnio-nio</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.wildfly</groupId>
+			<artifactId>wildfly-ejb3</artifactId>
+			<version>8.1.0.CR1</version>
+		</dependency>
+
+
+		<!-- Wildfly80 END -->
+		<dependency>
+			<groupId>org.ops4j.pax.exam</groupId>
+			<artifactId>pax-exam-invoker-jaxrs2</artifactId>
+			<version>3.5.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-client</artifactId>
+			<version>3.0.4.Final</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-simple</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.ops4j.pax.exam</groupId>
+			<artifactId>pax-exam-servlet-bridge</artifactId>
+			<version>3.5.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.ops4j.pax.exam.samples</groupId>
+			<artifactId>pax-exam-sample1-service</artifactId>
+			<version>3.5.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -63,19 +151,11 @@
 
 		<dependency>
 			<groupId>org.ops4j.pax.exam</groupId>
-			<artifactId>pax-exam-servlet-bridge</artifactId>
-			<version>3.5.0</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.ops4j.pax.exam</groupId>
 			<artifactId>pax-exam-cdi</artifactId>
 			<version>3.5.0</version>
 			<scope>test</scope>
 		</dependency>
 
-		<!-- OSGi runtime dependencies -->
 		<dependency>
 			<groupId>org.ops4j.pax.exam</groupId>
 			<artifactId>pax-exam-link-assembly</artifactId>
@@ -83,90 +163,137 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- protocol handlers -->
 		<dependency>
 			<groupId>org.ops4j.pax.url</groupId>
 			<artifactId>pax-url-link</artifactId>
-			<version>2.0.0</version>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.ops4j.pax.url</groupId>
-			<artifactId>pax-url-aether</artifactId>
 			<version>2.0.0</version>
-			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.ops4j.pax.url</groupId>
 			<artifactId>pax-url-classpath</artifactId>
+			<scope>test</scope>
 			<version>2.0.0</version>
+		</dependency>
+
+		<!-- pax-url-aether embeds an ancient version of google-collections. This 
+			is why we place Guava here. -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
 			<scope>test</scope>
+			<version>11.0.2</version>
 		</dependency>
 
-		<!-- OSGi framework -->
+		<!-- pax-url-aether embeds an older version of this lib -->
 		<dependency>
-			<groupId>org.eclipse.tycho</groupId>
-			<artifactId>org.eclipse.osgi</artifactId>
-			<version>3.6.2.R36x_v20110210</version>
+			<groupId>org.apache.xbean</groupId>
+			<artifactId>xbean-reflect</artifactId>
 			<scope>test</scope>
-		</dependency>
-
-		<!-- Java EE APIs -->
-		<dependency>
-			<groupId>org.apache.geronimo.specs</groupId>
-			<artifactId>geronimo-atinject_1.0_spec</artifactId>
-			<version>1.0</version>
-			<scope>provided</scope>
+			<version>3.17</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.geronimo.specs</groupId>
-			<artifactId>geronimo-jpa_2.0_spec</artifactId>
-			<version>1.1</version>
-			<scope>provided</scope>
+			<groupId>org.ops4j.pax.url</groupId>
+			<artifactId>pax-url-aether</artifactId>
+			<scope>test</scope>
+			<version>2.0.0</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.geronimo.specs</groupId>
-			<artifactId>geronimo-ejb_3.1_spec</artifactId>
-			<version>1.0.2</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<!-- Logging -->
+		<!-- For sane logging -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>1.1.2</version>
 			<scope>test</scope>
+			<version>1.1.2</version>
 		</dependency>
 
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.1.2</version>
 			<scope>test</scope>
+			<version>1.1.2</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.osgi</groupId>
-			<artifactId>org.osgi.core</artifactId>
-			<version>4.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.1</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jul-to-slf4j</artifactId>
 			<scope>test</scope>
+			<version>1.7.7</version>
 		</dependency>
+
 		<dependency>
-			<groupId>org.wildfly</groupId>
-			<artifactId>wildfly-embedded</artifactId>
-			<version>8.1.0.CR1</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<scope>test</scope>
+			<version>1.7.7</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<scope>test</scope>
+			<version>1.7.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-ext</artifactId>
+			<scope>test</scope>
+			<version>1.6.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-atinject_1.0_spec</artifactId>
+			<scope>provided</scope>
+			<version>1.0</version>
+		</dependency>
+
 	</dependencies>
+	<build>
+
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+			</testResource>
+		</testResources>
+
+		<plugins>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>persuite</id>
+						<configuration>
+							<forkMode>once</forkMode>
+							<excludes>
+								<exclude>**/perclass/*.java</exclude>
+							</excludes>
+						</configuration>
+					</execution>
+					<!--execution> <id>perclass</id> <configuration> <forkMode>always</forkMode> 
+						<includes> <include>**/perclass/**</include> </includes> </configuration> 
+						</execution -->
+				</executions>
+				<configuration>
+					<parallel>none</parallel>
+					<classpathDependencyScopeExclude>provided</classpathDependencyScopeExclude>
+					<argLine>-XX:MaxPermSize=256M</argLine>
+					<systemProperties>
+						<pax.exam.container></pax.exam.container>
+						<pax.exam.framework></pax.exam.framework>
+						<osgi.console>6666</osgi.console>
+					</systemProperties>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 
 
 
